--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,12 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\EntityListener\:
+        resource: "../src/EntityListener/"
+        tags: ["doctrine.orm.entity_listener"]
+
+    exercise_html_purifier.default: '@exercise_html_purifier.custom'
+
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
